refactor: altera estrutura de dados para pedidos e produtos